@@ -10,9 +10,9 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 import se.jensen.yuki.springboot.dto.block.BlockBlockingResponse;
 import se.jensen.yuki.springboot.dto.block.BlockResponse;
-import se.jensen.yuki.springboot.model.User;
 import se.jensen.yuki.springboot.repository.BlockRepository;
-import se.jensen.yuki.springboot.repository.UserRepository;
+import se.jensen.yuki.springboot.user.infrastructure.jpa.UserJpaEntity;
+import se.jensen.yuki.springboot.user.infrastructure.jpa.UserJpaRepository;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -25,19 +25,19 @@ class BlockServiceIntegrationTest {
     private BlockService blockService;
 
     @Autowired
-    private UserRepository userRepository;
+    private UserJpaRepository userJpaRepository;
 
     @Autowired
     private BlockRepository blockRepository;
 
-    private User userA;
-    private User userB;
+    private UserJpaEntity userA;
+    private UserJpaEntity userB;
 
     @BeforeEach
     void setUp() {
 
-        userA = userRepository.save(
-                User.builder()
+        userA = userJpaRepository.save(
+                UserJpaEntity.builder()
                         .username("userA")
                         .email("a@test.com")
                         .password("pass")
@@ -47,8 +47,8 @@ class BlockServiceIntegrationTest {
                         .build()
         );
 
-        userB = userRepository.save(
-                User.builder()
+        userB = userJpaRepository.save(
+                UserJpaEntity.builder()
                         .username("userB")
                         .email("b@test.com")
                         .password("pass")
@@ -151,7 +151,7 @@ class BlockServiceIntegrationTest {
         assertThat(slice.getContent()).hasSize(1);
 
         BlockBlockingResponse res =
-                slice.getContent().get(0);
+                slice.getContent().getFirst();
 
         assertThat(res.blockedUserId()).isEqualTo(userB.getId());
     }
